fix butler execution

--- a/action.yml
+++ b/action.yml
@@ -58,4 +58,4 @@ runs:
       shell: bash
       env: 
         BUTLER_API_KEY: ${{ inputs.api-key }}
-      run: butler push ${{ inputs.working-directory }} ${{ inputs.user }}/${{ inputs.game }}:${{ inputs.channel }}
+      run: ./butler push ${{ inputs.working-directory }} ${{ inputs.user }}/${{ inputs.game }}:${{ inputs.channel }}
